<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res/android"
    >
    <data>
        <import type="java.text.NumberFormat" />
        <variable name="data" type="com.example.myapplication.data.Data"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/gnss_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <TextView
                android:id="@+id/lon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                bind:text="@{data.longitudeStr}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                bind:text="@{data.latitudeStr}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/alt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/altitude"
                bind:text="@{data.altitudeStr}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/azimuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/azimuth"
                bind:text="@{data.azimuthStr}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/pitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pitch"
                bind:text="@{data.pitchStr}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roll"
                bind:text="@{data.rollStr}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>